# primitive-median

./: .gitignore  README.md  default.nix  primitive-median.cabal  shell.nix
benchmark-gauge/: Main.hs
benchmark-weigh/: Main.hs
common/: Common.hs
nix/haskell/: primitive.nix
src/Data/Primitive/PrimArray/: Bar.hs  Foo.hs  Median.hs  Poo.hs
test/: Main.hs
