name: primitive-median
version: 1.0.0
description: Median of unsorted primitive array
homepage: https://github.com/andrewthad/primitive-median#readme
bug-reports: https://github.com/andrewthad/primitive-median/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/primitive-median

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      -- should actually be 0.6.4
    , primitive >= 0.6.3
  exposed-modules:
    Data.Primitive.PrimArray.Median
  default-language: Haskell2010

test-suite primitive-median-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      base >=4.7 && <5
    , primitive-median
  default-language: Haskell2010
